<resources>
    <string name="app_name">Project</string>
    <string name="welcome">Welcome Back!</string>
    <string name="ask_for_login">Login to continue</string>
    <string name="ask_for_creating_new_account">Create a new account</string>
    <string name="sing_in">Sign in</string>
    <string name="sing_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="creating_new_account">Create account</string>
    <string name="ask_for_image">Add your image</string>
    <string name="ask_for_password_confirmation">Confirm Password</string>
    <string name="select_image">Select your profile image</string>
    <string name="select_name">Select your name</string>
    <string name="select_email">Select your email</string>
    <string name="select_valid_image">Select a valid image</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="select_password">Enter your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="match_password">Password does not match</string>
    <string name="user_created_ok">User is created</string>
    <string name="logged">Logged in</string>
    <string name="not_logged">Email or Password is not correct</string>
    <string name="logIn_exception">Not allowed to log in</string>
    <string name="pick_user">Choose a user</string>
    <string name="fetch_failed">Fetching users failed</string>
    <string name="no_users">There is no users to fetch</string>
    <string name="add_contact"> added to your contacts</string>
    <string name="no_contacts"> There is no contact</string>
    <string name="cant_send_message">Can not send your message</string>
    <string name="no_chat">There is no conversation</string>
    <string name="empty_message">Please write a message</string>


    <string name="name">Name</string>


</resources>
